Multi-Kafka config using env variables

--- a/src/beamlime/config/defaults/visualization_docker.yaml.jinja
+++ b/src/beamlime/config/defaults/visualization_docker.yaml.jinja
@@ -5,7 +5,11 @@ consumer:
     - beam_monitor_cumulative
     - beam_monitor_sliding
   kafka:
-    bootstrap.servers: {{ KAFKA_BROKER_BEAMLIME }}
+    bootstrap.servers: {{ KAFKA2_BOOTSTRAP_SERVERS }}
+    security.protocol: {{ KAFKA2_SECURITY_PROTOCOL }}
+    sasl.mechanism: {{ KAFKA2_SASL_MECHANISM }}
+    sasl.username: {{ KAFKA2_SASL_USERNAME }}
+    sasl.password: {{ KAFKA2_SASL_PASSWORD }}
     auto.offset.reset: latest
     enable.auto.commit: true
     fetch.min.bytes: 1
