--- a/src/beamlime/config/defaults/fake_producer_docker.yaml.jinja
+++ b/src/beamlime/config/defaults/fake_producer_docker.yaml.jinja
@@ -2,4 +2,8 @@ service:
   poll_interval: 0.1
 producer:
   kafka:
-    bootstrap.servers: {{ KAFKA_BROKER }}
+    bootstrap.servers: {{ KAFKA_BOOTSTRAP_SERVERS }}
+    security.protocol: {{ KAFKA_SECURITY_PROTOCOL }}
+    sasl.mechanism: {{ KAFKA_SASL_MECHANISM }}
+    sasl.username: {{ KAFKA_SASL_USERNAME }}
+    sasl.password: {{ KAFKA_SASL_PASSWORD }}
