--- a/src/beamlime/config/defaults/monitor_data_docker.yaml.jinja
+++ b/src/beamlime/config/defaults/monitor_data_docker.yaml.jinja
@@ -4,7 +4,11 @@ consumer:
   topics:
     - beam_monitor
   kafka:
-    bootstrap.servers: {{ KAFKA_BROKER }}
+    bootstrap.servers: {{ KAFKA_BOOTSTRAP_SERVERS }}
+    security.protocol: {{ KAFKA_SECURITY_PROTOCOL }}
+    sasl.mechanism: {{ KAFKA_SASL_MECHANISM }}
+    sasl.username: {{ KAFKA_SASL_USERNAME }}
+    sasl.password: {{ KAFKA_SASL_PASSWORD }}
     auto.offset.reset: latest
     enable.auto.commit: true
     fetch.min.bytes: 1
@@ -13,7 +17,11 @@ consumer:
 control:
   topic: beamlime_monitor_data_control
   kafka:
-    bootstrap.servers: {{ KAFKA_BROKER_BEAMLIME }}
+    bootstrap.servers: {{ KAFKA2_BOOTSTRAP_SERVERS }}
+    security.protocol: {{ KAFKA2_SECURITY_PROTOCOL }}
+    sasl.mechanism: {{ KAFKA2_SASL_MECHANISM }}
+    sasl.username: {{ KAFKA2_SASL_USERNAME }}
+    sasl.password: {{ KAFKA2_SASL_PASSWORD }}
     auto.offset.reset: earliest
     enable.auto.commit: true
     fetch.min.bytes: 1
@@ -21,4 +29,8 @@ control:
     heartbeat.interval.ms: 2000
 producer:
   kafka:
-    bootstrap.servers: {{ KAFKA_BROKER_BEAMLIME }}
+    bootstrap.servers: {{ KAFKA2_BOOTSTRAP_SERVERS }}
+    security.protocol: {{ KAFKA2_SECURITY_PROTOCOL }}
+    sasl.mechanism: {{ KAFKA2_SASL_MECHANISM }}
+    sasl.username: {{ KAFKA2_SASL_USERNAME }}
+    sasl.password: {{ KAFKA2_SASL_PASSWORD }}
